<resources>
    <string name="app_name">LoggerDoc</string>
    <string name="create_account">Create Account</string>
    <string name="username">UserName:</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="browse_problems">Browse Problems</string>
    <string name="browse_problem_map">Browse Problem Map</string>
    <string name="caregiver_information">Caregiver Information</string>
    <string name="browse_patients">Browse Patients</string>
    <string name="new_problem_title">Create A New Problem</string>
    <string name="enter_problem_title">Please Enter A Problem Title:</string>
    <string name="Problem_Start_Date_Instruction">Pick A Start Date For the Problem:</string>
    <string name="enter_problem_desc">Enter A Problem Description:</string>
    <string name="create_button">CREATE</string>
    <string name="new_record_title">Add A Record:</string>
    <string name="enter_record_title">Enter a Record Title:</string>
    <string name="add_geo_button">Add Geo-Location</string>
    <string name="add_body_location_button">Add Body Location</string>
    <string name="add_photo_button">Add Gallery Photo</string>
    <string name="add_photo_camera_button">Take Photo</string>

    <string name="edit_problem_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="view_problem_date">Date of First Discovery:</string>
    <string name="prob_desc_title">Problem Description:</string>
    <string name="edit_problem_title">Edit Problem</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="userID">User ID</string>
    <string name="emailAddressHint">Email Address</string>
    <string name="phoneNumberHint">123-456-7890</string>
    <string name="edit_title_problem">Edit Title:</string>
    <string name="problemRecordTItle">Problem Records:</string>
    <string name="addrecordbutton">Add Record</string>
    <string name="CaregiversCommentTitle">Caregiver\'s Comments:</string>
    <string name="recordImageTitle">Record Image(s):</string>
    <string name="chooseDate">Pick Date</string>
    <string name="title_activity_add_geolocation">Map</string>

    <string name="email_address">Email Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="browse_patients_title">Browse Patients</string>
    <string name="caregiver_flag">Caregiver</string>
    <string name="patient_flag">Patient</string>
    <string name="title_activity_photo_grid">ActivityPhotoGrid</string>
    <string name="view_records_button">View Records</string>
    <string name="record_geo_title">Record Geolocation</string>
    <string name="record_comment_title">Record Comment:</string>
    <string name="title_activity_body_location">ActivityBodyLocation</string>
    <string name="body_location_instruction">Click on the image at the location where the issue is located.</string>
    <string name="addCaregiverComment">Add Comment</string>
    <string name="returnButton">Return</string>
    <string name="view_map">View Map</string>
    <string name="searchProblemTitle">Search Problems</string>
    <string name="searchProblemKeywordsText">Problem Keyword(s):</string>
    <string name="searchRecordTitle">Search Records</string>
    <string name="searchRecordKeywordsText">Record Keyword(s):</string>
    <string name="searchGeolocationKeywordsText">Geolocation Keyword(s):</string>
    <string name="searchBodyLocationKeywordsText">Bodypart Keyword(s):</string>
    <string name="searchButtonText">Search</string>
    <string name="slideshow">View Slideshow</string>

</resources>
