<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPatientHomePage">

    <TextView
        android:id="@+id/PatientHomePageLoggerDoc"
        android:layout_width="202dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patient_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="Placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PatientHomePageLoggerDoc" />


    <Button
        android:id="@+id/PHomePageEditContactInfo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="176dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/soft_blue"
        android:text="Edit Contact Information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_problems_button"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/PatientHomePageflag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/patient_flag"
        android:textColor="@color/soft_blue"
        app:layout_constraintEnd_toEndOf="@+id/PatientHomePageLoggerDoc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/PatientHomePageLoggerDoc"
        app:layout_constraintTop_toTopOf="@+id/PatientHomePageLoggerDoc" />


    <Button
        android:id="@+id/browse_problem_map"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:text="@string/browse_problem_map"
        android:backgroundTint="@color/soft_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/browse_problems_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/browse_caregivers"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/caregiver_information"
        android:backgroundTint="@color/soft_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PHomePageEditContactInfo"
        app:layout_constraintTop_toBottomOf="@+id/browse_problem_map"
        app:layout_constraintVertical_bias="0.888" />


    <Button
        android:id="@+id/browse_problems_button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:onClick="changeActivity"
        android:text="@string/browse_problems"
        android:backgroundTint="@color/soft_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>