<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySearchProblems">

    <TextView
        android:id="@+id/searchRecordTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/searchProblemTitle"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchProblemKeywordsText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:text="@string/searchProblemKeywordsText"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecordTitleText" />

    <EditText
        android:id="@+id/searchProblemKeywordsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Keyword"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemKeywordsText" />

    <TextView
        android:id="@+id/searchProblemGeolocationKeywordsText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/searchGeolocationKeywordsText"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemKeywordsEditText" />

    <EditText
        android:id="@+id/searchProblemGeolocationKeywordsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Keyword"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemGeolocationKeywordsText" />

    <TextView
        android:id="@+id/searchProblemBodyLocationKeywordsText"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/searchBodyLocationKeywordsText"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemGeolocationKeywordsEditText" />

    <EditText
        android:id="@+id/searchProblemBodyLocationKeywordsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Keyword"
        android:inputType="textPersonName"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemBodyLocationKeywordsText" />

    <Button
        android:id="@+id/searchProblemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="searchButtonPress"
        android:text="@string/searchButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProblemBodyLocationKeywordsEditText" />

</android.support.constraint.ConstraintLayout>